# apohara-compliance

./: .gitignore  BENCHMARK.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  PROOF-v2.4-open-ended.md  README.md  SECURITY.md  references
.agents/skills/apohara-compliance/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude-plugin/: plugin.json
.claude/commands/: add-or-update-taint-rule-and-propagate.md  frozen-eval-split-and-measurement-cycle.md  release-version-and-documentation-update.md
.claude/homunculus/instincts/inherited/: apohara-compliance-instincts.yaml
.claude/skills/apohara-compliance/: SKILL.md
.codex/: AGENTS.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  release-v3.yml  release.yml  scorecard.yml
.omc/state/: prd.json
action/: README.md  action.yml
crates/scanner/: Cargo.toml
crates/scanner/references/: ast-2026.yaml  atlas-2026.yaml  cargo-audit-v2.1.txt  controls-49.yaml  detection-rules.yaml  iso42001-2023.yaml  validation-log.md  verification-log.md
crates/scanner/src/: baseline.rs  cli.rs  config.rs  gap.rs  main.rs  matching.rs  model.rs  parse_otlp.rs  parse_repo.rs  parse_session.rs  rules.rs  sequence.rs  shell.rs  shell_s1.rs  suppress.rs  taint.rs  triage.rs
crates/scanner/src/format/: gap.rs  json.rs  md.rs  mod.rs  sarif.rs
crates/scanner/src/shell/: ast.rs  lexer.rs  match_.rs  mod.rs  parse.rs
crates/scanner/tests/: independent_corpus.rs  integration.rs  precision_recall.rs  trajectory_corpus.rs
docs/: adoption.md  open-questions.md
docs/adr/: ADR-2-multi-action-sequence-matching.md  ADR-3-independent-corpus-and-prose-gap.md  ADR-4-trajectory-taint-correlation.md  ADR-5-representation-aware-taint-and-evasion-robust-matching.md  ADR-6-real-trajectory-efficacy.md  ADR-7-argument-value-provenance.md  ADR-8-agentdyn-open-ended-frontier.md  ADR-9-posix-shell-parser-ativo.md
docs/demo/: demo-script.md
docs/grammar/: posix-shell-v2.4-subset.md
references/: asi-2026.yaml  crosswalk-asi-llm.yaml  detection-rules.yaml  eu-ai-act-2024.yaml  reference.md
scripts/: check-bundle.sh  diag-pr-marker.txt  verify.sh
scripts/eval/: SOURCE-agentdyn.md  SOURCE-agentharm.md  assert_polarity.py  b0-2-budget.md  b0-3-pablo-decision.md  count_agentdyn_positives.py  extract_agentdojo.py  extract_agentdyn_positives.py  minimax_smoke.py  openrouter_smoke.py  probe_open_ended_suites.py  run_agentdojo_e2e.py  run_agentharm_eval.py  run_openrouter_e2e.py  scan_v22_live.py  scan_v23_devtest.py  split_v23_devtest.py  test_b0_capability_probe.py  validate_agentdojo_shape.py  validate_report_schema.py  validate_v22_report.py  validate_v23_report.py  wrap_agentdojo_trace.py
scripts/hooks/: pretooluse-scan-action.sh
skills/apohara-compliance/: SKILL.md
tests/corpus/: PREREG-v2-agentdojo.md  PREREG-v2.2-real-trajectory.md  PREREG-v2.3.md  PROOF-v2-minimax.md  PROOF-v2.2-real-trajectory.md  PROOF-v2.3-argument-value-provenance.md  agentharm-report.json  expected.json  v2.2-real-trajectory-report.json  v2.3-argument-value-provenance-report.json
tests/corpus/agentdojo/: SOURCE.md  expected.json
tests/corpus/agentdojo/raw/: banking.jsonl  slack.jsonl  travel.jsonl  workspace.jsonl
tests/fixtures/: mis004-flag-reorder-positive.jsonl  sample.apohara-compliance.toml  sample.apohara-suppress  session-sample.jsonl  trj-benign-negative.jsonl  trj-direct-injection-refusal-negative.jsonl  trj-representation-aware-positive.jsonl  trj-structured-sink-benign-trap.jsonl  trj001-exfil-positive.jsonl  trj002-destructive-positive.jsonl  trj003-financial-positive.jsonl
tests/fixtures/repo-fixture/: .gitignore  cleanup.sh
tests/fixtures/repo-fixture/src/: config.py  report.sql
